--- a/src/app/general-screen-feature/pages/home-page/home-page.component.html
+++ b/src/app/general-screen-feature/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<section class="skrollable u-align-center u-clearfix u-grey-75 u-section-1" id="sec-9104">
+<section class="skrollable u-align-center u-clearfix u-section-1" [class.u-grey-75]="nightModeService.isNightModeEnabled" [class.u-white-75]="!nightModeService.isNightModeEnabled" id="sec-9104">
     <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <h1 class="u-text u-text-default u-text-1">Welcome To Your Library</h1>
       <p class="u-text u-text-2">Click to open your new library</p>
