--- a/src/app/add-image-feature/components/local-image-add/local-image-add.component.css
+++ b/src/app/add-image-feature/components/local-image-add/local-image-add.component.css
@@ -1,13 +1,14 @@
 .u-section-1 .u-sheet-1 {
     min-height: 689px;
   }
-  
+  .u-image{
+    height:250px;
+  }
   .u-section-1 .u-form-1 {
     height: 67px;
     width: 570px;
     margin: 18px auto 0;
   }
-  
   .u-section-1 .u-btn-1 {
     background-image: none;
     border-style: none;
@@ -21,7 +22,6 @@
   .u-section-1 .u-repeater-1 {
     grid-template-columns: calc(33.3333% - 26.6667px) calc(33.3333% - 26.6667px) calc(33.3333% - 26.6667px);
     grid-gap: 40px 40px;
-    min-height: 417px;
   }
   
   
@@ -29,7 +29,7 @@
     border-style: none;
     text-transform: uppercase;
     background-image: none;
-    margin: 342px auto 0;
+    margin: 0 auto ;
   }
   
   .u-section-1 .u-container-layout-2 {
@@ -40,7 +40,7 @@
     border-style: none;
     text-transform: uppercase;
     background-image: none;
-    margin: 342px auto 0;
+    margin: 0 auto ;
   }
   
   .u-section-1 .u-container-layout-3 {
@@ -51,7 +51,7 @@
     border-style: none;
     text-transform: uppercase;
     background-image: none;
-    margin: 342px auto 0;
+    margin: 0 auto ;
   }
   
   .u-section-1 .u-form-2 {
