--- a/src/app/add-image-feature/components/local-image-add/local-image-add.component.html
+++ b/src/app/add-image-feature/components/local-image-add/local-image-add.component.html
@@ -1,4 +1,4 @@
-<section class="u-clearfix u-section-1" id="sec-816e">
+<section class="u-clearfix u-section-1" [class.u-grey-75]="nightModeService.isNightModeEnabled" [class.u-white-75]="!nightModeService.isNightModeEnabled">
     <div class="u-clearfix u-sheet u-sheet-1">
       <div class="u-form u-form-1">
         <form action="#" method="POST" class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" source="custom" name="form" style="padding: 10px;">
@@ -15,17 +15,17 @@
       </div><!--blog--><!--blog_options_json--><!--{"type":"Recent","source":"","tags":"","count":""}--><!--/blog_options_json-->
       <div class="u-blog u-expanded-width-lg u-expanded-width-md u-expanded-width-xl u-blog-1">
         <div class="u-repeater u-repeater-1"><!--blog_post-->
-          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle u-image-1" [ngStyle]="{'background-image':image1}" data-image-width="2000" data-image-height="1333">
+          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle" [ngStyle]="{'background-image':image1}" data-image-width="2000" data-image-height="1333">
             <div class="u-container-layout u-similar-container u-container-layout-1"><!--blog_post_readmore-->
               <a (click)="removeImage(1)" class="u-blog-control u-btn u-btn-rectangle u-button-style u-palette-3-base u-btn-2">Remove Image</a>
             </div>
           </div><!--/blog_post--><!--blog_post-->
-          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle u-image-2" [ngStyle]="{'background-image':image2}" data-image-width="2000" data-image-height="1333">
+          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle" [ngStyle]="{'background-image':image2}" data-image-width="2000" data-image-height="1333">
             <div class="u-container-layout u-similar-container u-container-layout-2"><!--blog_post_readmore-->
               <a (click)="removeImage(2)" class="u-blog-control u-btn u-btn-rectangle u-button-style u-palette-3-base u-btn-3">Remove Image</a>
             </div>
           </div><!--/blog_post--><!--blog_post-->
-          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle u-image-3" [ngStyle]="{'background-image':image3}" data-image-width="2000" data-image-height="1333">
+          <div class="u-blog-post u-container-style u-image u-repeater-item u-shape-rectangle" [ngStyle]="{'background-image':image3}" data-image-width="2000" data-image-height="1333">
             <div class="u-container-layout u-similar-container u-container-layout-3"><!--blog_post_readmore-->
               <a (click)="removeImage(3)" class="u-blog-control u-btn u-btn-rectangle u-button-style u-palette-3-base u-btn-4">Remove Image</a>
             </div>
